--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,8 +1,8 @@
 {
     "name": {
-        "message": "ПасАй"
+        "message": "ПасcАй"
     },
     "description": {
-        "message": "Для паролей скрытых за звёздочками"
+        "message": "Просмотр паролей, скрытых за звёздочками"
     }
 }
