Add browser action menu

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -4,5 +4,14 @@
     },
     "description": {
         "message": "View passwords hidden behind asterisks"
+    },
+    "contribute": {
+        "message": "Make a donation"
+    },
+    "contributeTranslation": {
+        "message": "Translate to your language"
+    },
+    "contributeBugReport": {
+        "message": "Report a bug"
     }
 }
