Add command description

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -5,6 +5,9 @@
     "description": {
         "message": "View passwords hidden behind asterisks"
     },
+    "commandViewPassword": {
+        "message": "View passwords"
+    },
     "contribute": {
         "message": "Make a donation"
     },
